--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
   <nav class="navbar">
     <div class="nav-container">
-      <div class="logo">
+      <!-- <div class="logo">
         <span class="logo-text">MHN</span>
         <span class="logo-dot">.</span>
       </div>
-      
+       -->
       <ul class="nav-links">
         <li><a href="#hero"><i class="fas fa-home"></i> Home</a></li>
         <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
